--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,4 +45,6 @@ jobs:
       - name: Publish packages to NPM
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: npm publish
+        run: |
+          npm config set "//registry.npmjs.org/:_authToken" "${NPM_TOKEN}"
+          npm -r publish --access=public --no-git-checks
