--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,17 +32,18 @@ jobs:
     if: ${{ github.repository_owner == 'ZhongxuYang' }}
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Install Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: 16
+          registry-url: https://registry.npmjs.org/
 
       - name: Install dependencies
         run: yarn && yarn build
 
       - name: Publish packages to NPM
-        run: |
-          echo "//registry.npmjs.org/:_authToken=\${{ secrets.NPM_TOKEN }}" >> ~/.npmrc
-          npm publish --access public
+        run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
