--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,8 +43,8 @@ jobs:
         run: yarn && yarn build
 
       - name: Publish packages to NPM
-        run: |
-          npm config set //registry.npmjs.org/:_authToken=$NPM_TOKEN  
-          npm publish
         env:
-          NPM_TOKEN: ${{secrets.NPM_TOKEN}}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: |
+          npm config set //registry.npmjs.org/:_authToken $NPM_TOKEN
+          npm publish
