--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,5 +46,6 @@ jobs:
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
-          npm config set //registry.npmjs.org/:_authToken $NPM_TOKEN
+          npm config set //registry.npmjs.org/:_authToken=$NPM_TOKEN
+          npm whoami
           npm publish
